--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/hoobank.svg" />
+  <link rel="icon" type="image/svg+xml" href="https://niriot-dotcom.github.io/bank-transactions/public/hoobank.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#000000" />
   <title>HooBank</title>
@@ -11,7 +11,7 @@
 
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="https://niriot-dotcom.github.io/bank-transactions/src/main.jsx"></script>
 </body>
 
 </html>
