--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/devbank.svg" />
+  <link rel="icon" type="image/svg+xml" href="/assets/hoobank.ed7ed7f4.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="theme-color" content="#000000" />
-  <title>DevBank</title>
+  <title>HooBank</title>
   <script type="module" crossorigin src="/assets/index.3e7562bf.js"></script>
   <link rel="stylesheet" href="/assets/index.99023af3.css">
 </head>
